kubernetes/main/apps/database/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    kustomize.toolkit.fluxcd.io/prune: enabled
